--- a/styles/style.css
+++ b/styles/style.css
@@ -6,4 +6,74 @@
     margin: 0;
     padding: 0;
     font-family: "Inter", sans-serif;
+    /* background-color: #000000; */
+}
+
+.navbar{
+    color: white;
+    padding-top: 58px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.menu {
+    cursor: pointer;
+    text-decoration: none;
+    display: flex;
+    border: 1px solid gray;
+    border-radius: 50px;
+    padding: 2px;
+}
+
+.menu> li{
+    list-style: none;
+    padding: 10px 20px;
+    
+}
+
+.active {
+    background-color: #E6533C;
+    border-radius: 46px;
+}
+
+header {
+    height: 100vh;
+    background: #2C2C2C;
+    /* background: linear-gradient(180deg, #111 0%, rgba(119, 119, 119, 0.00) 100%); */
+}
+
+.container {
+    max-width: 1440px;
+    padding: 0 190px;
+    margin: auto;
+    box-sizing: border-box;
+}
+
+.section {
+    margin-bottom: 100px;
+}
+
+.hamburger {
+    display: none;
+}
+
+@media (max-width:576px) {
+    .hamburger {
+        display: block;
+        cursor: pointer;
+    }
+
+    .menu {
+        display: none;
+    }
+
+    .navbar{
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .container {
+        padding: 0 20px;
+    }
 }
